--- a/less/components/example-card.less
+++ b/less/components/example-card.less
@@ -1,5 +1,5 @@
 .example-card__container{
-  max-width: 100%;
+  max-width: 90%;
   order: 2;
   position: relative;
 
@@ -31,7 +31,7 @@
     &-1 {
       position: absolute;
       top: 10%;
-      left: 30%;
+      left: 25%;
       transform: rotateY(20deg) translateZ(-70px) scale(0.8) translateY(-30px);
 
       @media @desktop {
